welcome.lessons.welcome.summative.Moria.scala.code
 def run(){
  while (!fin()){
    gauche()
    gauche()
    while (!estSurBiscuit()){
      avance()
    }
    prendBiscuit()
    gauche()
    gauche()
    while (!estSurBiscuit()){
      avance()
    }
    recule()
    poseBiscuit()
  }
  if (estSurBiscuit()){
    prendBiscuit()
    gauche()
    gauche()
    while(!estSurBiscuit()){
      avance()
    }
    recule()
    poseBiscuit()
    gauche()
    gauche()
    while (!fin()){
      avance()
    }
  }
  droite()
  avance()
  gauche()
  avance()
}


def fin():Boolean={
  if (getDirection()==Direction.EST){
    if (estFaceMur()){
      return true
    } else return false
  } else return false
}